# py_cavalier_contours

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build.rs  mypy.ini  pyproject.toml  readme.md
.github/workflows/: CI.yml
docs/: cavalier-contours-upgrade.md
examples/: 01_basic_polyline.py  02_arcs_and_circles.py  03_boolean_operations.py  04_offset.py  05_shape_with_holes.py  06_point_queries.py  _gui_common.py
py_cavalier_contours/: __init__.py  polyline.py  shape.py  types.py
src/: lib.rs
test/: conftest.py  test_boolean.py  test_polyline.py  test_shape.py  test_vertex.py
