[package]
name = "py_cavalier_contours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_cavalier_contours"
crate-type = ["cdylib"]

[dependencies]
cavalier_contours_ffi = { git = "https://github.com/jbuckmccready/cavalier_contours", rev = "768834191e7f59903bbff21152878c6ed542c817"}
cavalier_contours = { git = "https://github.com/jbuckmccready/cavalier_contours", rev = "768834191e7f59903bbff21152878c6ed542c817"}

[build-dependencies]
cargo_metadata = "0.15.3"
cbindgen = "0.29.2"

[package.metadata.maturin]
name = "py_cavalier_contours.py_cavalier_contours"
